apps/demo-6/demo-6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-6
  namespace: demo-6
  labels:
    app: demo-6
spec:
  selector:
    app: demo-6
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
